--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,7 @@ body {
     background-size: 200% 200%;
     animation: flow 10s ease-in-out infinite;
 }
+
+.animated-text{
+    @apply  text-primary animate-pulse;
+}
