--- a/src/index.css
+++ b/src/index.css
@@ -96,19 +96,23 @@ body {
 
 /* Animated background utility */
 .animated-background {
-    @apply bg-linear-30 from-secondary/40 via-accent/40 to-error/40;
+    @apply bg-linear-30 from-white via-primary/10 to-primary;
     background-size: 200% 200%;
     animation: flow 10s ease-in-out infinite;
 }
 
 .animate-button {
-    @apply bg-linear-30 from-primary/50 via-secondary/50 to-error/50;
+    @apply bg-linear-30 from-primary via-primary/10 to-white border border-primary;
     background-size: 200% 200%;
     animation: flow 10s ease-in-out infinite;
 }
 
 .animate-button-error {
-    @apply bg-linear-30 from-error/80 via-secondary/40 to-primary/50;
+    @apply bg-linear-30 from-error via-white to-error/10;
     background-size: 200% 200%;
     animation: flow 10s ease-in-out infinite;
+}
+
+.animated-text{
+    @apply  text-primary animate-pulse;
 }
